--- a/output/agricultural_sciences_p1_2024_june_QP_Agricultural-Sciences-NSC-QP-May-June-2024-Eng-Eastern-Cape.json
+++ b/output/agricultural_sciences_p1_2024_june_QP_Agricultural-Sciences-NSC-QP-May-June-2024-Eng-Eastern-Cape.json
@@ -10,7 +10,7 @@
       "questions": [
         {
           "id": "1.1.1",
-          "text": "... is a muscular valve that opens to allow food to pass from the stomach to the top of the small intestine:",
+          "text": "... is a muscular valve that opens to allow food to pass from the stomach to the top of the small intestine.",
           "marks": 2,
           "options": [
             {
@@ -79,7 +79,7 @@
         },
         {
           "id": "1.1.4",
-          "text": "The following are the functions of rumen microbes:\n\n(i)  Hydrolyse proteins\n(ii) Digest cellulose\n(iii) Synthesise amino acids\n(iv) Synthesise vitamin C\n\nChoose the CORRECT combination:",
+          "text": "The following are the functions of rumen microbes:\n(i) Hydrolyse proteins\n(ii) Digest cellulose\n(iii) Synthesise amino acids\n(iv) Synthesise vitamin C\nChoose the CORRECT combination:",
           "marks": 2,
           "options": [
             {
@@ -92,7 +92,7 @@
             },
             {
               "label": "C",
-              "text": "(ii), (iii) and (iv)"
+              "text": "(i), (ii) and (iv)"
             },
             {
               "label": "D",
@@ -237,6 +237,404 @@
               "text": "Oxytocin"
             }
           ]
+        },
+        {
+          "id": "1.2.1",
+          "text": "Indicate whether each of the descriptions in COLUMN B applies to A ONLY, B ONLY, BOTH A AND B or NONE of the items in COLUMN A. Write A only, B only, both A and B or none next to question numbers (1.2.1 to 1.2.5) in the ANSWER BOOK, for example 1.2.6 B only.\n\nCOLUMN A: A: Diffusion\nCOLUMN B: Movement of nutrients down the concentration gradient",
+          "marks": 2
+        },
+        {
+          "id": "1.2.2",
+          "text": "COLUMN A: A: Create ideal pH\nB: enzymes pepsin and renin\nCOLUMN B: Functions of hydrochloric acid in a glandular stomach",
+          "marks": 2
+        },
+        {
+          "id": "1.2.3",
+          "text": "COLUMN A: A: Acute\nB: Per acute\nCOLUMN B: Disease that is persistent or long lasting in its effects",
+          "marks": 2
+        },
+        {
+          "id": "1.2.4",
+          "text": "COLUMN A: A: Pinned ears\nB: Snorting\nCOLUMN B: Sign of aggression in cattle",
+          "marks": 2
+        },
+        {
+          "id": "1.2.5",
+          "text": "COLUMN A: A: Foetal period\nB: Embryonic period\nCOLUMN B: Stage of pregnancy characterised by differentiation of cells to form tissues, organs and systems",
+          "marks": 2
+        },
+        {
+          "id": "1.3.1",
+          "text": "A type of fodder made from green foliage crops which have been preserved by fermentation to the point of acidification",
+          "marks": 2
+        },
+        {
+          "id": "1.3.2",
+          "text": "A restricted area where a large number of animals are kept for optimal production purposes",
+          "marks": 2
+        },
+        {
+          "id": "1.3.3",
+          "text": "The stage of mating during which bulls display the flehmen reaction",
+          "marks": 2
+        },
+        {
+          "id": "1.3.4",
+          "text": "A method of increasing the numbers of oocytes that are released at ovulation and are available to increase fertilisation",
+          "marks": 2
+        },
+        {
+          "id": "1.3.5",
+          "text": "The fusion of male and female gametes to form a zygote",
+          "marks": 2
+        },
+        {
+          "id": "1.4.1",
+          "text": "The pharynx is a gutter shaped structure which carries milk from the oesophagus directly into the abomasum in a young lamb.",
+          "marks": 1
+        },
+        {
+          "id": "1.4.2",
+          "text": "Metabolic diseases can be transmitted from one animal to another.",
+          "marks": 1
+        },
+        {
+          "id": "1.4.3",
+          "text": "Spermatogenesis is the production of ova.",
+          "marks": 1
+        },
+        {
+          "id": "1.4.4",
+          "text": "Twins formed from one sperm and ovum are called dizygotic twins.",
+          "marks": 1
+        },
+        {
+          "id": "1.4.5",
+          "text": "Maceration occurs when a foetus dies, followed by the formation of a hard skeleton and skin.",
+          "marks": 1
+        }
+      ]
+    },
+    {
+      "group_id": "QUESTION 2",
+      "title": "SECTION B",
+      "questions": [
+        {
+          "id": "2.1.1",
+          "text": "Name a farm animal with the stomach compartments shown above.",
+          "marks": 1
+        },
+        {
+          "id": "2.1.2",
+          "text": "Name stomach compartments A and C.",
+          "marks": 2
+        },
+        {
+          "id": "2.1.3",
+          "text": "Identify an adaptation feature visible on stomach compartment A.",
+          "marks": 1
+        },
+        {
+          "id": "2.1.4",
+          "text": "Explain how the adaptation mentioned in QUESTION 2.1.3 above results in improved digestion.",
+          "marks": 2
+        },
+        {
+          "id": "2.1.5",
+          "text": "Deduce with a reason, the stomach compartment of a ruminant where one will expect to find a plastic bag, if an animal mistakenly swallowed it.",
+          "marks": 2
+        },
+        {
+          "id": "2.2.1",
+          "text": "Identify the vitamins associated with each of the deficiency symptoms below:\n(a) An enlarged thyroid gland",
+          "marks": 1
+        },
+        {
+          "id": "2.2.1",
+          "text": "(b) Rickets",
+          "marks": 1
+        },
+        {
+          "id": "2.2.1",
+          "text": "(c) Skin lesions",
+          "marks": 1
+        },
+        {
+          "id": "2.2.2",
+          "text": "Identify a vitamin that is less likely to be deficient in ruminants.",
+          "marks": 1
+        },
+        {
+          "id": "2.2.3",
+          "text": "Motivate your answer to QUESTION 2.2.2 above.",
+          "marks": 2
+        },
+        {
+          "id": "2.3.1",
+          "text": "Calculate the coefficient of digestibility of the feed above.",
+          "marks": 6
+        },
+        {
+          "id": "2.3.2",
+          "text": "Give TWO factors that could have influenced the digestibility of the feed in the trial.",
+          "marks": 2
+        },
+        {
+          "id": "2.3.3",
+          "text": "Suggest TWO methods a farmer can use to improve the digestibility of the feed above.",
+          "marks": 2
+        },
+        {
+          "id": "2.4",
+          "text": "A farmer grows maize and soyabeans on his farm. The farmer is keeping layers which require a feed with a digestible protein content of 17%. Maize has a digestible content of 13% while the soyabean contains 35% digestible protein.\nUse a Pearson square to determine the ratio at which the two feeds must be mixed, to get the desired digestible protein content.",
+          "marks": 4
+        },
+        {
+          "id": "2.5",
+          "text": "Biological value (BV) is a measure of the proportion of absorbed protein from a food which becomes incorporated into the proteins of the organism's body.",
+          "marks": 0
+        },
+        {
+          "id": "2.5.1",
+          "text": "Compare the biological values of feeds of plant origin to those of animal origin.",
+          "marks": 2
+        },
+        {
+          "id": "2.5.2",
+          "text": "Explain why it is important to feed non-ruminants with feeds of higher biological as compared to ruminants.",
+          "marks": 2
+        },
+        {
+          "id": "2.6.1",
+          "text": "Identify the plan described above.",
+          "marks": 1
+        },
+        {
+          "id": "2.6.2",
+          "text": "Give TWO reasons why the plan mentioned in QUESTION 2.6.1 is essential for optimum animal production.",
+          "marks": 2
+        }
+      ]
+    },
+    {
+      "group_id": "QUESTION 3",
+      "title": "ANIMAL PRODUCTION, PROTECTION AND CONTROL",
+      "questions": [
+        {
+          "id": "3.1.1",
+          "text": "Identify the production system associated with the housing system above.",
+          "marks": 1
+        },
+        {
+          "id": "3.1.2",
+          "text": "Motivate the answer to QUESTION 3.1.1 above by giving TWO visible reasons in the picture.",
+          "marks": 2
+        },
+        {
+          "id": "3.1.3",
+          "text": "Assess whether the production system above can be implemented by resource poor farmers? Justify your answer.",
+          "marks": 2
+        },
+        {
+          "id": "3.1.4",
+          "text": "Identify TWO factors that can result in improved production in the production system above.",
+          "marks": 2
+        },
+        {
+          "id": "3.2.1",
+          "text": "Translate the information in the table above into a line graph.",
+          "marks": 6
+        },
+        {
+          "id": "3.2.2",
+          "text": "Deduce the trend shown in the graph.",
+          "marks": 2
+        },
+        {
+          "id": "3.2.3",
+          "text": "Suggest TWO pieces of equipment that can be used by farmers to regulate temperature in animal housing systems.",
+          "marks": 2
+        },
+        {
+          "id": "3.3.1",
+          "text": "Identify the parasite shown above.",
+          "marks": 1
+        },
+        {
+          "id": "3.3.2",
+          "text": "Classify the parasite above as an ecto or endoparasite.",
+          "marks": 1
+        },
+        {
+          "id": "3.3.3",
+          "text": "Describe ONE symptom of infestation by the parasite above in sheep.",
+          "marks": 1
+        },
+        {
+          "id": "3.3.4",
+          "text": "Give THREE financial implications of infestation by the parasite shown above.",
+          "marks": 3
+        },
+        {
+          "id": "3.3.5",
+          "text": "Recommend a chemical control measure that can be used by farmers to deal with parasite shown above.",
+          "marks": 1
+        },
+        {
+          "id": "3.4.1",
+          "text": "It is a zoonotic disease",
+          "marks": 1
+        },
+        {
+          "id": "3.4.2",
+          "text": "Transmitted by a one host tick",
+          "marks": 1
+        },
+        {
+          "id": "3.4.3",
+          "text": "Causes inflammation of the udder",
+          "marks": 1
+        },
+        {
+          "id": "3.4.4",
+          "text": "Is an example of a fungal disease",
+          "marks": 1
+        },
+        {
+          "id": "3.5.1",
+          "text": "Identify the poisonous plant shown in the picture above.",
+          "marks": 1
+        },
+        {
+          "id": "3.5.2",
+          "text": "Recommend with a reason a treatment strategy for an animal that has consumed the poisonous plant shown above.",
+          "marks": 2
+        },
+        {
+          "id": "3.5.3",
+          "text": "Give TWO measures farmers can use to prevent their livestock from being poisoned by poisonous plants like the one shown above.",
+          "marks": 2
+        },
+        {
+          "id": "3.5.4",
+          "text": "Describe TWO roles that the state play in animal protection.",
+          "marks": 2
+        }
+      ]
+    },
+    {
+      "group_id": "QUESTION 4",
+      "title": "ANIMAL REPRODUCTION",
+      "questions": [
+        {
+          "id": "4.1.1",
+          "text": "Identify parts labelled A, B and D.",
+          "marks": 3
+        },
+        {
+          "id": "4.1.2",
+          "text": "Identify the part associated with each of the statements below:\n(a) The primary reproductive organ",
+          "marks": 1
+        },
+        {
+          "id": "4.1.2",
+          "text": "(b) The copulatory organ",
+          "marks": 1
+        },
+        {
+          "id": "4.1.2",
+          "text": "(c) Site of fertilisation",
+          "marks": 1
+        },
+        {
+          "id": "4.1.3",
+          "text": "Describe TWO functions of part C.",
+          "marks": 2
+        },
+        {
+          "id": "4.2.1",
+          "text": "Explain why artificial insemination is considered cheap.",
+          "marks": 1
+        },
+        {
+          "id": "4.2.2",
+          "text": "Name TWO pieces of equipment that are key in the process described above.",
+          "marks": 2
+        },
+        {
+          "id": "4.2.3",
+          "text": "Define the underlined phrase in the passage above.",
+          "marks": 2
+        },
+        {
+          "id": "4.2.4",
+          "text": "Give TWO hormones that can be used to synchronise oestrus.",
+          "marks": 2
+        },
+        {
+          "id": "4.3.1",
+          "text": "Name the presentation shown in the diagram above.",
+          "marks": 1
+        },
+        {
+          "id": "4.3.2",
+          "text": "Identify the stage of parturition shown above.",
+          "marks": 1
+        },
+        {
+          "id": "4.3.3",
+          "text": "Describe TWO other causes of dystocia.",
+          "marks": 2
+        },
+        {
+          "id": "4.3.4",
+          "text": "Give TWO signs shown by cows approaching parturition that farmers should look out for.",
+          "marks": 2
+        },
+        {
+          "id": "4.4.1",
+          "text": "Identify hormones X and Y.",
+          "marks": 2
+        },
+        {
+          "id": "4.4.2",
+          "text": "Give the letter of the stage that shows the oestrus stage.",
+          "marks": 1
+        },
+        {
+          "id": "4.4.3",
+          "text": "Give TWO reasons to support your answer to QUESTION 4.4.2 above.",
+          "marks": 2
+        },
+        {
+          "id": "4.4.4",
+          "text": "Recommend TWO aids farmers can use to detect animals on oestrus.",
+          "marks": 2
+        },
+        {
+          "id": "4.5.1",
+          "text": "Identify the technique shown above.",
+          "marks": 1
+        },
+        {
+          "id": "4.5.2",
+          "text": "Deduce whether the offspring C will have the genes of sheep A or B.",
+          "marks": 1
+        },
+        {
+          "id": "4.5.3",
+          "text": "Name process D.",
+          "marks": 1
+        },
+        {
+          "id": "4.5.4",
+          "text": "Describe the main purpose of the reproductive technique above.",
+          "marks": 1
+        },
+        {
+          "id": "4.5.5",
+          "text": "Give THREE disadvantages of this reproductive technique.",
+          "marks": 3
         }
       ]
     }
